--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://www.xiamo.club
+url: https://www.kbdxe.cn
 date_format: "ordinal"
 title: 狂奔的熊二
 subtitle: "好好学习，天天向上"
