--- a/_config.yml
+++ b/_config.yml
@@ -121,5 +121,5 @@ simple_jekyll_search:
 # ---------------- #
 #    Analytics     #
 # ---------------- #
-#google:
-  #  analytics_id: UA-118703491-1
+google:
+    analytics_id: UA-118703491-1
