--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ paginate: 8
 lsi: false
 quiet: false
 excerpt_separator: "\n\n"
-permalink: title.html
+permalink: /:year/:month/:day/:title/
 gems:
     - jekyll-github-metadata
     - rouge
